.env changes , constant files added, google strategy added

--- a/src/.env
+++ b/src/.env
@@ -1,5 +1,11 @@
+#.gitignore
+.env
 DATABASE_URL = mongodb+srv://shadowmonarch712:testuser@cluster0.mzexokf.mongodb.net/
 NODE_ENV = local
 ELASTICSEARCH_NODE = http://localhost:9200
 PORT = 3000
 ELASTICSEARCH_INDEX = specialization
+CLIENT_ID=66691015782-e6ohtc2rplq5h4lkpgelifflb69uqr1g.apps.googleusercontent.com
+CLIENT_SECRET=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
+MONGO_URI = mongodb+srv://shadowmonarch712:testuser@cluster0.mzexokf.mongodb.net/
+
