--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "google-auth-library": "^9.6.2",
+    "google-auth-library": "^9.6.3",
     "mongoose": "^8.1.1",
     "nodemailer": "^6.9.8",
     "passport": "^0.7.0",
@@ -52,6 +52,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-google-oauth20": "^2.0.14",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.0",
