changes made on 13th feb , 7:21 PM

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL = mongodb+srv://shadowmonarch712:testuser@cluster0.mzexokf.mongodb.net/
+MONGO_URI = mongodb+srv://shadowmonarch712:testuser@cluster0.mzexokf.mongodb.net/
 NODE_ENV = local
 ELASTICSEARCH_NODE = http://localhost:9200
 PORT = 3000
