--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ NODE_ENV = local
 ELASTICSEARCH_NODE = http://localhost:9200
 PORT = 3000
 ELASTICSEARCH_INDEX = specialization
+JWT_REFRESH_SECRET = rt-secret
+OAUTH_CLIENT_ID = 569852703196-99ene8o0pca7migjcbi4s6mb1gbo0jg8.apps.googleusercontent.com
+OAUTH_CLIENT_SECRET = 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
