--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ ELASTICSEARCH_INDEX = specialization
 JWT_REFRESH_SECRET = rt-secret
 OAUTH_CLIENT_ID = 569852703196-99ene8o0pca7migjcbi4s6mb1gbo0jg8.apps.googleusercontent.com
 OAUTH_CLIENT_SECRET = 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
+SEND_GRID_API_KEY = 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
+FROM_EMAIL = adityasrivastava0709@gmail.com
