--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.2.0",
+    "@sendgrid/mail": "^8.1.1",
     "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
